finally got webpack.config.client.js to work

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -10,10 +10,11 @@ body,
 }
 
 body {
-  background: lightgrey;
+  background: white;
 }
 
 .app {
   display: flex;
   justify-content: center;
+  height: 100%;
 }
