--- a/client/src/index.css
+++ b/client/src/index.css
@@ -4,8 +4,8 @@ html,
 body,
 #root,
 .app {
-  height: 100%;
-  width: 100%;
+  /* height: 100%;
+  width: 100%; */
   font-family: 'Comfortaa', 'Oswald', sans-serif;
 }
 
@@ -17,4 +17,5 @@ body {
   display: flex;
   justify-content: center;
   height: 100%;
+  width: 100%;
 }
